# autumn_py

./: .gitignore  README.md  pyproject.toml
autumn_py/: __init__.py  _ast_rewrite.py  api.py  events.py  gate.py  inference.py  ops.py  properties.py  runtime.py  smt.py  stdlib.py  values.py
autumn_py/handlers/: __init__.py  events.py  objects.py  prev.py  random.py  render.py  state.py  world.py  writes.py
drafts/: refactor-design-notes.md
examples/: ants.py  game_of_life.py  grow.py  mario.py  particles.py  player.py  sand.py  space_invaders.py
examples/space_invaders/: __init__.py  _common.py  r1.py  r2_fixed.py  r2_off_by_one.py
scripts/: make_demo_gif.py
tests/: conftest.py  test_api.py  test_examples.py  test_gate.py  test_handlers.py  test_overwrite_skips_next.py  test_particles.py  test_properties.py  test_render_order.py  test_smt.py  test_type_checker.py  test_type_inference.py
